--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,1 +1,13 @@
-$primary:red;
+// colors
+$primary:#2c4bff;
+$success:#5debdf;
+$danger:#db1a2a;
+$warning:#ff6c60;
+
+
+//$theme-colors: (
+//        "primary":    $primary,
+//        "success":    $success,
+//        "warning":    $warning,
+//        "danger":     $danger,
+//);
